# cratch

./: CMakeLists.txt  README.md
include/: array_map.h  circular_queue.h  hash_functions.h  linked_list.h  queue.h  stack.h  str.h
practice/: str_practice.c
src/: array_map.c  circular_queue.c  hash_functions.c  linked_list.c  main.c  queue.c  stack.c  str.c
